--- a/src/aspnet-core/src/HealthCheckExample.Web.Mvc/appsettings.json
+++ b/src/aspnet-core/src/HealthCheckExample.Web.Mvc/appsettings.json
@@ -17,5 +17,15 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "HealthCheckExample",
+        "Uri": "http://localhost:62114/healthz"
+      }
+    ],
+    "EvaluationTimeOnSeconds": 10,
+    "MinimumSecondsBetweenFailureNotifications": 60
   }
 }
