--- a/src/aspnet-core/src/HealthCheckExample.Application/HealthCheckExample.Application.csproj
+++ b/src/aspnet-core/src/HealthCheckExample.Application/HealthCheckExample.Application.csproj
@@ -11,6 +11,10 @@
     <RootNamespace>HealthCheckExample</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\HealthCheckExample.Core\HealthCheckExample.Core.csproj" />
+    <ProjectReference Include="..\HealthCheckExample.EntityFrameworkCore\HealthCheckExample.EntityFrameworkCore.csproj" />
   </ItemGroup>
 </Project>
