--- a/src/aspnet-core/src/HealthCheckExample.Web.Core/HealthCheckExample.Web.Core.csproj
+++ b/src/aspnet-core/src/HealthCheckExample.Web.Core/HealthCheckExample.Web.Core.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\HealthCheckExample.EntityFrameworkCore\HealthCheckExample.EntityFrameworkCore.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.Uris" Version="2.2.3" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
