--- a/src/aspnet-core/src/HealthCheckExample.Web.Mvc/HealthCheckExample.Web.Mvc.csproj
+++ b/src/aspnet-core/src/HealthCheckExample.Web.Mvc/HealthCheckExample.Web.Mvc.csproj
@@ -26,6 +26,8 @@
     <ProjectReference Include="..\HealthCheckExample.Web.Core\HealthCheckExample.Web.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.UI" Version="2.2.32" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.HealthChecks" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.1">
       <PrivateAssets>All</PrivateAssets>
